WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225909
AX: Settings: Increase contrast isn't detected in browser until an additional setting is applied
https://bugs.webkit.org/show_bug.cgi?id=225909
Summary
AX: Settings: Increase contrast isn't detected in browser until an additional...
chris fleizach
Reported
2021-05-18 00:54:18 PDT
When using a media query to detect the setting "Increase Contrast" AX setting, the setting can't be detected until an additional setting is updated. <
rdar://problem/77580880
>
Attachments
patch
(15.83 KB, patch)
2021-05-20 00:37 PDT
,
chris fleizach
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
patch
(18.72 KB, patch)
2021-05-20 00:55 PDT
,
chris fleizach
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
patch
(19.32 KB, patch)
2021-05-20 10:52 PDT
,
chris fleizach
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
patch
(19.33 KB, patch)
2021-05-20 11:00 PDT
,
chris fleizach
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
patch
(19.30 KB, patch)
2021-05-20 12:24 PDT
,
chris fleizach
pvollan
: review+
Details
Formatted Diff
Diff
patch
(16.92 KB, patch)
2021-05-21 10:53 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(14.54 KB, patch)
2021-05-21 10:54 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(21.68 KB, patch)
2021-05-24 09:27 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2021-05-20 00:37:24 PDT
Created
attachment 429143
[details]
patch
chris fleizach
Comment 2
2021-05-20 00:55:24 PDT
Created
attachment 429144
[details]
patch
chris fleizach
Comment 3
2021-05-20 10:52:14 PDT
Created
attachment 429187
[details]
patch
chris fleizach
Comment 4
2021-05-20 11:00:15 PDT
Created
attachment 429188
[details]
patch
chris fleizach
Comment 5
2021-05-20 12:24:40 PDT
Created
attachment 429204
[details]
patch
Per Arne Vollan
Comment 6
2021-05-20 15:12:33 PDT
Comment on
attachment 429204
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=429204&action=review
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1130 > + auto cfKey = key.createCFString().get();
I think you may need to retain the CFStringRef here. auto cfKey = key.createCFString();
Per Arne Vollan
Comment 7
2021-05-21 06:24:30 PDT
Comment on
attachment 429204
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=429204&action=review
R=me.
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1074 > +static const WTF::String& invertColorsPreferenceKey()
Is there an existing constant you can use for this key?
chris fleizach
Comment 8
2021-05-21 10:52:26 PDT
Comment on
attachment 429204
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=429204&action=review
>> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1074 >> +static const WTF::String& invertColorsPreferenceKey() > > Is there an existing constant you can use for this key?
unfortunately no, I can ask to expose one for the future though (Rdar://78317458)
>> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1130 >> + auto cfKey = key.createCFString().get(); > > I think you may need to retain the CFStringRef here. > > auto cfKey = key.createCFString();
done
chris fleizach
Comment 9
2021-05-21 10:53:24 PDT
Created
attachment 429312
[details]
patch
chris fleizach
Comment 10
2021-05-21 10:54:24 PDT
Created
attachment 429313
[details]
patch
chris fleizach
Comment 11
2021-05-24 09:27:36 PDT
Created
attachment 429538
[details]
patch
EWS
Comment 12
2021-05-24 15:27:10 PDT
Committed
r277971
(
238093@main
): <
https://commits.webkit.org/238093@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429538
[details]
.
Tim Horton
Comment 13
2021-05-24 17:53:02 PDT
Comment on
attachment 429538
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=429538&action=review
> Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:99 > +WK_EXPORT void WKAccessibilityTestingInjectPreference(WKBundlePageRef, const String& domain, const String& key, const Optional<String>& encodedValue);
You can't use WTF::String in API; see WKStringRef. This breaks the build (I'm not sure why EWS didn't catch it, but it's failing for other patches now that it's landed).
chris fleizach
Comment 14
2021-05-24 18:06:48 PDT
(In reply to Tim Horton from
comment #13
)
> Comment on
attachment 429538
[details]
> patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=429538&action=review
> > > Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:99 > > +WK_EXPORT void WKAccessibilityTestingInjectPreference(WKBundlePageRef, const String& domain, const String& key, const Optional<String>& encodedValue); > > You can't use WTF::String in API; see WKStringRef. This breaks the build > (I'm not sure why EWS didn't catch it, but it's failing for other patches > now that it's landed).
Ok will update
WebKit Commit Bot
Comment 15
2021-05-24 18:07:12 PDT
Re-opened since this is blocked by
bug 226202
Truitt Savell
Comment 16
2021-05-28 10:53:31 PDT
It looks like the changes in
https://trac.webkit.org/changeset/277971/webkit
broke TestWebKitAPI.WebKit.AccessibilityReduceMotion and is now timing out history:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.AccessibilityReduceMotion
chris fleizach
Comment 17
2021-05-28 10:57:46 PDT
(In reply to Truitt Savell from
comment #16
)
> It looks like the changes in
https://trac.webkit.org/changeset/277971/webkit
> > broke TestWebKitAPI.WebKit.AccessibilityReduceMotion and is now timing out > > history: >
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit
. > AccessibilityReduceMotion
Thanks for pointing out. Will take a look at that test. Whatever it was checking wasn’t accurate if it was passing before…
Truitt Savell
Comment 18
2021-06-01 10:38:40 PDT
Filed
https://bugs.webkit.org/show_bug.cgi?id=226505
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug