AX: Settings: Increase contrast isn't detected in browser until an additional setting is applied https://bugs.webkit.org/show_bug.cgi?id=225909

Reviewed by Per Arne Vollan.

Source/WebCore/PAL:

* pal/spi/mac/HIServicesSPI.h:

Source/WebKit:

Tests: accessibility/mac/media-query-values-change.html

1) WebContent blocks access to distributed notification center, so we can't rely on that to re-post notifications
2) AppKit caches the values of these AX settings, so we need to invalidate that cache directly

* Platform/spi/mac/AppKitSPI.h:
* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKAccessibilityTestingInjectPreference):
* WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::invertColorsPreferenceKey):
(WebKit::dispatchSimulatedNotificationsForPreferenceChange):
(WebKit::setPreferenceValue):
(WebKit::reduceMotionPreferenceKey): Deleted.

Tools:

* WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
(WTR::AccessibilityController::injectAccessibilityPreference):
* WebKitTestRunner/InjectedBundle/AccessibilityController.h:
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityController.idl:
* WebKitTestRunner/InjectedBundle/mac/AccessibilityControllerMac.mm:
(WTR::AccessibilityController::injectAccessibilityPreference):

LayoutTests:

* accessibility/mac/media-query-values-change-expected.txt: Added.
* accessibility/mac/media-query-values-change.html: Added.


Canonical link: https://commits.webkit.org/238093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277971 268f45cc-cd09-0410-ab3c-d52691b4dbfc