Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.h
@@ -77,6 +77,7 @@ public:
 
     bool addNotificationListener(JSValueRef functionCallback);
     bool removeNotificationListener();
+    void injectAccessibilityPreference(JSStringRef domain, JSStringRef key, JSStringRef value);
 
     // Here for consistency with DRT. Not implemented because they don't do anything on the Mac.
     void logFocusEvents() { }
